syntax = "proto3";

package blog_mysql;

option go_package = "blogpb";

message Blog {
   
    int64 author_id = 1;
    string title = 2;
    string content = 3;
}

message CreateBlogRequest {
    Blog blog = 1;
}

message CreateBlogResponse {
    Blog blog = 1; // will have a blog id
}
message ReadBlogRequest {
    int64 author_id = 1;
}

message ReadBlogResponse {
    Blog blog = 1;
}
message UpdateBlogRequest {
    Blog blog = 1;
}

message UpdateBlogResponse {
    Blog blog = 1;
}
message DeleteBlogRequest {
    int64 author_id = 1;
}

message DeleteBlogResponse {
    int64 author_id  = 1;
}



service BlogService {
    rpc CreateBlog (CreateBlogRequest) returns (CreateBlogResponse);
     rpc ReadBlog (ReadBlogRequest) returns (ReadBlogResponse); // return NOT_FOUND if not found
     rpc UpdateBlog (UpdateBlogRequest) returns (UpdateBlogResponse);// return NOT_FOUND if not found
    rpc DeleteBlog (DeleteBlogRequest) returns (DeleteBlogResponse); // return NOT_FOUND if n
}
